# canvas-chat

./: .bumpversion.cfg  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  PERPLEXITY_RESPONSES_IMPLEMENTATION.md  README.md  TESTING_PERPLEXITY.md  app.py  config.example.yaml  firestore.rules  mise.toml  modal_app.py  package.json  pyproject.toml
.github/workflows/: auto-release.yaml  code-style.yaml  docs.yaml  modal-deploy.yaml  tests.yaml
docs/explanation/: tool-calling-architecture.md
docs/how-to/: create-tool-plugins.md  use-matrix-evaluation.md
docs/reference/: tool-registry-api.md
docs/releases/: v0.1.11.md  v0.1.14.md  v0.1.16.md  v0.1.17.md  v0.1.19.md  v0.1.24.md  v0.1.26.md  v0.1.28.md  v0.1.29.md  v0.1.3.md  v0.1.30.md  v0.1.31.md  v0.1.32.md  v0.1.35.md  v0.1.37.md  v0.1.38.md  v0.1.39.md  v0.1.4.md  v0.1.41.md  v0.1.45.md  v0.1.6.md  v0.1.7.md
sandbox/: perplexity_fast_search.py  perplexity_patched.py  perplexity_raw_sse.py
src/canvas_chat/: app.py  (+6 more)
static/: index.html
tests/: test_agents_event_bridge.py  test_agents_tool_bridge.py  test_app_mcp_lifespan.py  test_branch_plugin.js  test_calculator_tool.py  test_config_mcp.py  test_copilot_auth.js  test_decompose_plugin.js  test_mcp_manager.py  test_mcp_results.py  test_mcp_status_endpoint.py  test_mcp_tool_adapter.py  test_model_browser.js  test_models.py  test_node_protocols.js  test_provider_models.py  test_search.js  test_sse.js  test_storage.js  test_tool_registry.py  test_tool_registry_instances.py  test_ui.js  test_utils.js  test_web_search_tool.py
(+74 files in other folders)
